--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "node ./lib/server.js"
   },
   "devDependencies": {
-    "jsx-loader": "^0.13.2",
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "serve": "^1.4.0",
     "webpack": "^1.5.3"
   },
@@ -18,6 +21,7 @@
     "inert": "^3.2.0",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
+    "react-mixin": "^3.0.3",
     "react-router": "^1.0.0",
     "varo": "^0.1.3"
   }
